tests/fixtures/invalid/set_floordiv_int.py
# Cannot floor divide Set[int] and Int
x: set[int] = {1, 2, 3} // 1
